<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/TextViewDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/ver_margin"
        android:layout_marginHorizontal="@dimen/hor_margin_mini"
        android:text="@string/Titulo"
        android:layout_gravity="left"
        android:textSize="@dimen/Texto_titulo"
        android:fontFamily="@font/gloria_hallelujah"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/InputTextNombre"
        android:layout_marginHorizontal="@dimen/hor_margin"
        android:layout_marginVertical="@dimen/ver_margin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/nom_completo"
        android:fontFamily="@font/gloria_hallelujah"
        android:textSize="@dimen/Texto_textv"
        />

    <TextView
        android:id="@+id/TextViewFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:layout_gravity="center"
        android:textSize="@dimen/Texto_fecha"
        android:fontFamily="@font/gloria_hallelujah"
        />

    <DatePicker
        android:id="@+id/Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/hor_margin"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/InputTextTelefono"
        android:layout_marginHorizontal="@dimen/hor_margin"
        android:layout_marginVertical="@dimen/ver_margin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/telefono"
        android:fontFamily="@font/gloria_hallelujah"
        android:textSize="@dimen/Texto_textv"
        android:inputType="number"

        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/InputTextEmail"
        android:layout_marginHorizontal="@dimen/hor_margin"
        android:layout_marginVertical="@dimen/ver_margin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:fontFamily="@font/gloria_hallelujah"
        android:textSize="@dimen/Texto_textv"
        android:inputType="textEmailAddress"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/InputTextDescripcion"
        android:layout_marginHorizontal="@dimen/hor_margin"
        android:layout_marginVertical="@dimen/ver_margin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/descripcion"
        android:fontFamily="@font/gloria_hallelujah"
        android:textSize="@dimen/Texto_textv"
        />

    <Button
        android:id="@+id/BotonSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/next"
        android:fontFamily="@font/gloria_hallelujah"
        android:backgroundTint="@color/boton"
        />
</LinearLayout>